# vuekobot

./: .gitignore  .ignore  Cargo.toml  LICENSE  flake.nix  module.nix  site.nix
migrations/2024-04-08-000751_create_commands/: down.sql
src/: command.rs  main.rs  schema.rs
vueko-backend/: Cargo.toml
vueko-backend/migrations/2024-04-08-000751_create_commands/: up.sql
vueko-backend/src/: app.rs  command.rs  config.rs  main.rs  twitch.rs
vueko-backend/src/api/: mod.rs
vueko-frontend/: package-lock.json  package.json  pnpm-lock.yaml
vueko-frontend/src/: global.css
vueko-frontend/src/routes/: +layout.svelte  +page.svelte
vueko-frontend/src/routes/channel/[channel]/commands/: +page.svelte  +page.ts
