[package]
name = "vuekobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.5", features = ["uuid", "postgres"] }
anyhow = "1.0.81"
diesel-async = { version = "0.4.1", features = ["postgres", "bb8", "tokio"] }
tmi = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
# twitch_api = { version = "0.7.0-rc.7", features = [
#   "reqwest",
#   "helix",
#   "eventsub",
#   "hmac",
#   "deny_unknown_fields",
# ] }
# reqwest = "0.11.25"

[dependencies.uuid]
version = "1.8.0"
features = ["v7", "fast-rng", "macro-diagnostics"]
