[package]
name = "vuekobot"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.5", features = ["uuid", "postgres"] }
diesel-async = { version = "0.4.1", features = [
  "postgres",
  "bb8",
  "tokio",
  "async-connection-wrapper",
] }
tmi = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
diesel_migrations = "2.1.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
axum = "0.7.5"
eyre = "0.6.12"
# twitch_api = { version = "0.7.0-rc.7", features = [
#   "reqwest",
#   "helix",
#   "eventsub",
#   "hmac",
#   "deny_unknown_fields",
# ] }
# reqwest = "0.11.25"

[dependencies.uuid]
version = "1.8.0"
features = ["v7", "fast-rng", "macro-diagnostics"]
